--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-requests>=2.27.1
-numpy>=1.14.0
-pandas>=0.23.4
+numpy>=1.26.2
+pandas>=2.1.3
 gdown>=3.10.1
 tqdm>=4.30.0
-Pillow>=5.2.0
-opencv-python>=4.5.5.64
-tensorflow>=1.9.0
-keras>=2.2.0
-Flask>=1.1.2
-flask_cors>=4.0.1
-mtcnn>=0.1.0
-retina-face>=0.0.1
+Pillow==10.1.0
+opencv-python>=4.8.1.78
+tensorflow==2.14.0
+keras==2.14.0
+Flask>=3.0.0
+mtcnn>=0.1.1
+retina-face>=0.0.13
 fire>=0.4.0
 gunicorn>=20.1.0
+Deprecated>=1.2.13
+matplotlib~=3.8.2
+requests~=2.31.0
+setuptools~=68.0.0
