switching to latest update

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Fetch CodeBoarding Documentation
         id: codeboarding
-        uses: CodeBoarding/CodeBoarding-GHAction@v0.0.2
+        uses: CodeBoarding/CodeBoarding-GHAction@main
         with:
           repository_url: ${{ github.event.inputs.repository_url }}
           source_branch: ${{ steps.set-branches.outputs.source_branch }}
