--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -90,7 +90,7 @@ jobs:
         if: steps.git-changes.outputs.has_git_changes == 'true' && steps.codeboarding.outputs.has_changes == 'true'
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
           commit-message: "docs: update codeboarding documentation"
           title: "📚 CodeBoarding Documentation Update"
           body: |
