Added correct default values for time rerunning

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -6,7 +6,7 @@ on:
       repository_url:
         description: 'Repository URL to test with'
         required: false
-        default: ''
+        default: 'https://github.com/serengil/deepface'
         type: string
       source_branch:
         description: 'Source branch for comparison'
