Added timeout of 30 mins

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -33,6 +33,7 @@ on:
 jobs:
   update-docs-action-usage:
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     permissions:
       contents: write
       pull-requests: write
