--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Fetch CodeBoarding Documentation
         id: codeboarding
+        timeout-minutes: 30
         uses: CodeBoarding/CodeBoarding-GHAction@main
         with:
           repository_url: ${{ github.event.inputs.repository_url }}
