--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 requests>=2.27.1
-numpy>=1.14.0
-pandas>=0.23.4
+numpy>=1.22.0
+pandas>=2.0.3
 gdown>=3.10.1
 tqdm>=4.30.0
 Pillow>=5.2.0
-opencv-python>=4.5.5.64
-tensorflow>=1.9.0
-keras>=2.2.0
+opencv-python>=4.8.1.78
+tensorflow==2.17.0
+keras>=2.17.0
+tf-keras>=2.17.0
 Flask>=1.1.2
 flask_cors>=4.0.1
 mtcnn>=0.1.0
 retina-face>=0.0.14
 fire>=0.4.0
 gunicorn>=20.1.0
+grpcio-tools>=1.59.5
+grpcio>=1.59.5
