allow users to load models on app start up to respond faster in 1st request

--- a/deepface/api/.env.example
+++ b/deepface/api/.env.example
@@ -1,1 +1,6 @@
+DEEPFACE_DATABASE_TYPE=postgres
 DEEPFACE_CONNECTION_DETAILS=
+
+# set models here with commas to load on app start up, otherwise they will load in the 1st request and respond slower
+DEEPFACE_FACE_RECOGNITION_MODELS=VGG-Face,Facenet
+DEEPFACE_FACE_DETECTION_MODELS=mtcnn
