bearer token support added

--- a/deepface/api/.env.example
+++ b/deepface/api/.env.example
@@ -1,6 +1,9 @@
-DEEPFACE_DATABASE_TYPE=postgres
+DEEPFACE_DATABASE_TYPE=postgres # postgres, mongo, weaviate
 DEEPFACE_CONNECTION_DETAILS=
 
 # set models here with commas to load on app start up, otherwise they will load in the 1st request and respond slower
 DEEPFACE_FACE_RECOGNITION_MODELS=VGG-Face,Facenet
 DEEPFACE_FACE_DETECTION_MODELS=mtcnn
+
+# activate DEEPFACE_AUTH_TOKEN to enable bearer token
+# DEEPFACE_AUTH_TOKEN=
